<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bactable"
    tools:context=".OptionsActivity"
    android:layoutDirection="ltr">


    <LinearLayout
        android:id="@+id/linUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/icon_user" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Admin"
            android:textColor="@color/white_dark"
            android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linUser"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="150dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/items_stroke"
                android:orientation="vertical"
                android:padding="5dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:src="@drawable/stairs" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:text="@string/floor_no"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/options_add_floor"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:background="@drawable/ic_keyboard_arrow_down_yellow_24dp" />
                </TableRow>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TableLayout
                        android:id="@+id/options_floorNo_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </TableLayout>
                </ScrollView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/items_stroke"
                android:orientation="vertical"
                android:padding="5dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:src="@drawable/table" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:text="@string/table_no"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/options_add_table"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:background="@drawable/ic_keyboard_arrow_down_yellow_24dp" />
                </TableRow>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TableLayout
                        android:id="@+id/options_tableNo_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </TableLayout>
                </ScrollView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/items_stroke"
                android:orientation="horizontal"
                android:padding="5dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:src="@drawable/chair" />

                <EditText
                    android:id="@+id/options_noOfSeats_ET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="3"
                    android:hint="@string/no_of_seats"
                    android:padding="10dp"
                    android:textSize="30sp" />

            </LinearLayout>

            <Button
                android:id="@+id/options_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_background"
                android:padding="10dp"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/white_dark"
                android:textSize="30sp" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>